# fastapi-prac

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  myapi.db  pyproject.toml
backend/: database.py  log.ini  main.py  models.py
backend/domain/answer/: answer_crud.py  answer_router.py  answer_schema.py
backend/domain/question/: question_crud.py  question_router.py  question_schema.py
backend/domain/user/: user_crud.py  user_router.py  user_schema.py
backend/migrations/: env.py
backend/migrations/versions/: 00d045eb99d5_.py  01f610160ff2_update.py  02325c8178c6_update.py  03389718f4c7_update.py  03c07b9ff362_add_question_answer_modify_date_column.py  4489ab33bada_update_answer_model.py  4addcf192f49_.py  8a862d54bbb4_.py  b96e5c319ebf_.py  c3cf9d711aa5_update_question_model.py  f9d876907c6e_add_question_answer_voter.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.svelte
frontend/src/routes/: Detail.svelte  Home.svelte
migrations/: env.py
migrations/versions/: 4addcf192f49_.py
models/: users.py
