[tool.poetry]
name = "fastapi-dd"
version = "0.1.0"
description = ""
authors = ["chch_oi <ckdgus1101@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_dd"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
