[tool.poetry]
name = "fastapi-dd"
version = "0.1.0"
description = ""
authors = ["chch_oi <ckdgus1101@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_dd"}]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.9.4"
fastapi = "^0.92.0"
FastAPI-SQLAlchemy = "^0.2.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
uvicorn = "^0.20.0"
black = "^23.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
